# movx

./: .gitignore  README.md  mkdocs.yml  movx-rc-daemon  movx.service  pyproject.toml
.github/workflows/: python-package.yml
docs/: gen_ref_pages.py
movx/: __init__.py  __main__.py  app.py  cli.py  selfupdate.py  test.py
movx/core/: __init__.py  agent.py  db.py  dcp.py  dcps.py  jobs.py  location.py  locations.py  movx.py  status.py  tasks.py
movx/gui/: __init__.py  dcp.py  dcps.py  job.py  jobs.py  location.py  locations.py  main.py  movie.py  movies.py  settings.py  styleguide.py
movx/gui/cards/: __init__.py  dcp.py  dcps.py  job.py  jobs.py  locations.py  movie.py  movies.py  settings.py
movx/ui/: __init__.py  dcp.py  dcps.py  jobs.py  list.py  locations.py  main.py  settings.py  tasks.py
movx/ui/cards/: dcp.py  settings.py  tasks.py
tests/: .gitignore
