#[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"

[build-system]
requires = ["setuptools>=42", "wheel", "nuitka", "toml"]
build-backend = "nuitka.distutils.Build"

 
[project]
name = "movx"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "clairmeta",
    "h2o_wave",
]

[project.scripts]
movx = "movx.cli:main"


[nuitka]
nofollow-import-to = ["*.tests", "*.distutils"]